fixed y overflow issue on address form

--- a/angular/src/app/modules/account/new-payment-form/new-payment-form.component.scss
+++ b/angular/src/app/modules/account/new-payment-form/new-payment-form.component.scss
@@ -42,7 +42,7 @@ $label-color: white;
 .col-25,
 .col-50,
 .col-75 {
-  padding: 0 16px;
+  padding: 0 10px;
 }
 
 label {
